--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.exe
 *.o
 *.so
+*.idea
 
 # Packages #
 ############
@@ -35,3 +36,7 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Other files #
+###############
+Salto/old_codes.txt
